opam-version: "2.0"
name: "cps_toolbox"
version: "0.4"
synopsis: "A partial OCaml standard library replacement written with continuation passing style in mind"
maintainer: "Soren Norbaek <sorennorbaek@gmail.com>"
authors: "Soren Norbaek <sorennorbaek@gmail.com>"
license: "MIT"
homepage: "https://github.com/soren-n/cps-toolbox"
bug-reports: "https://github.com/soren-n/cps-toolbox/issues"
dev-repo: "git+https://github.com/soren-n/cps-toolbox.git"
build: [
  "dune" "build" "-p" name "-j" jobs "@install"
  "@runtest" {with-test}
]
depends: [
  "dune" {>= "3.0"}
  "qcheck" {with-test & >= "0.18"}
]
